# Xen

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  Xen.sln  build_cuda.bat  build_no-options.ps1
Xen/: Package.appxmanifest  Xen.cpp  Xen.h  Xen.rc  Xen.vcxproj  Xen.vcxproj.filters  packages.config
Xen/benchmarks/: provider_benchmark.cpp  provider_benchmark.h
Xen/capture/: capture.cpp  capture.h  circle_fov.h  duplication_api_capture.cpp  duplication_api_capture.h  ndi_capture.cpp  ndi_capture.h  ndi_frame_geometry.cpp  ndi_frame_geometry.h  network_frame_geometry.h  udp_capture.cpp  udp_capture.h  virtual_camera.cpp  virtual_camera.h  winrt_capture.cpp  winrt_capture.h
Xen/config/: config.cpp  config.h
Xen/debug/: pipeline_tracer.cpp  pipeline_tracer.h
Xen/depth/: depth_anything_trt.cpp  depth_anything_trt.h  depth_mask.cpp  depth_mask.h  depth_utils.cpp  depth_utils.h
Xen/detector/: cuda_preprocess.h  detection_buffer.cpp  detection_buffer.h  detection_filters.cpp  detection_filters.h  dml_detector.cpp  dml_detector.h  postProcess.cpp  postProcess.h  trt_detector.cpp  trt_detector.h
Xen/imgui/: imgui_widgets.cpp
Xen/keyboard/: keyboard_listener.cpp  keyboard_listener.h  keycodes.cpp  keycodes.h
Xen/mem/: cpu_affinity_manager.cpp  cpu_affinity_manager.h  gpu_resource_manager.cpp  gpu_resource_manager.h
Xen/modules/makcu/src/: makcu.cpp  makcu_c.cpp  serialport.cpp
Xen/mouse/: AimbotTarget.cpp  AimbotTarget.h  Arduino.cpp  Arduino.h  KmboxAConnection.cpp  KmboxAConnection.h  Makcu.cpp  Makcu.h  MouseInput.cpp  MouseInput.h  RP2350.cpp  RP2350.h  Teensy41RawHid.cpp  Teensy41RawHid.h  ghub.cpp  ghub.h  hid.c  hidapi.h  kmboxA.cpp  kmboxA.h  kmboxNetConnection.cpp  kmboxNetConnection.h  mouse.cpp  mouse.h  rzctl.cpp  rzctl.h  trajectory.h
Xen/mouse/kmbox_net/: kmboxNet.cpp  kmboxNet.h
Xen/overlay/: Game_overlay.cpp  Game_overlay.h  config_dirty.cpp  config_dirty.h  draw_ai.cpp  draw_buttons.cpp  draw_capture.cpp  draw_debug.cpp  draw_depth.cpp  draw_game_overlay.cpp  draw_mouse.cpp  draw_overlay.cpp  draw_pipeline_tracer.cpp  draw_settings.h  draw_stats.cpp  draw_target.cpp  export_progress_panel.h  overlay.cpp  overlay.h  ui_sections.h
Xen/runtime/: aim_coordinate_space.h  aim_pipeline_runtime.cpp  aim_pipeline_runtime.h  aim_pipeline_types.h  application_shutdown.cpp  application_shutdown.h  application_threads.cpp  application_threads.h  applied_view_motion_model.cpp  applied_view_motion_model.h  basic_aim_controller.h  basic_target_filter.h  build_identity.cpp  build_identity.h  command_cancellation_epoch.h  command_trajectory_shaper.cpp  command_trajectory_shaper.h  conditional_speed_budget.h  control_interval_tracker.h  cross_domain_replay.cpp  cross_domain_replay.h  fov_scaling.h  frame_rate_counter.h  game_overlay_loop.cpp  input_device_manager.cpp  lan_control_server.cpp  lan_control_server.h  latest_frame_queue.h  los_aim_controller.cpp  los_aim_controller.h  machine_profile_cache.cpp  machine_profile_cache.h  machine_profile_candidate_main.cpp  maneuver_los_estimator.cpp  maneuver_los_estimator.h  manual_control_arbiter.h  mouse_thread_loop.cpp  output_scheduler.cpp  output_scheduler.h  passive_profile_calibrator.h  (+26 more)
Xen/scr/: data_collector.cpp  data_collector.h  other_tools.cpp
Xen/tensorrt/: nvinf.cpp  nvinf.h  trt_monitor.h
docs/: 001基础跟踪算法重构20260713.md  002静止目标移动速度调优20260713.md  002项目开发铁律20260713.md  003静止目标振荡排查20260713.md  004网络捕获坐标与帧率契约20260713.md  005OBS低带宽NDI坐标契约20260713.md  006NDI源刷新排查20260713.md  007NDI高帧率与退出优化20260713.md  008统一采集帧率诊断20260713.md  009NDI静止目标二次提速20260713.md  010自动推导覆盖移动参数修复20260713.md  011NDI与UDP九点对比优化20260713.md  012CUDA跨设备架构修复20260713.md  013CUDA发布依赖清理20260713.md  014四链路九宫格复测优化20260713.md  015四链路复测与最小测试矩阵20260713.md  016移动目标测试方案20260713.md  017移动目标首轮分析与PI候选20260713.md  018移动PI稳定态冲突修复20260714.md  019DML移动复测与积分解卷绕20260714.md  020持续移动与高频反转优化20260714.md  021复测版本身份与陈旧程序防护20260714.md  022版本确认后的持续与高频复测20260714.md  023320与240毫秒积分对照20260714.md  024反转阈值与最新积分复测20260714.md  025最新320与280积分复测20260714.md  026冻结320与DML性能诊断20260714.md  027DML首轮性能分析与FP16方案20260714.md  028连续观测预测模块重构20260714.md  029预测设置入口修复20260714.md  030标准视频闭环模拟与预测候选20260714.md  031快速横跳实测与联合参数优化20260714.md  032框外身位预测与防翻向设计20260714.md  033运动学自适应提前重构20260714.md  034稳健常速度预测与实机振荡排查20260714.md  035预测连续性保持与单帧门控修复20260714.md  036透视坐标修正与jump视野逃逸优化20260714.md  037静止收敛自运动伪迹抑制20260714.md  038自运动伪迹尾迹保持20260714.md  039自运动保持后预测重新武装20260714.md  (+166 more)
docs/guides/: backends.md  build-workflow.md  capture-diagnostics.md  circle-fov.md  data-collection.md  first-launch.md  input-methods.md  ndi-capture.md  overlay.md  recipes.md  troubleshooting.md  udp-capture.md
tests/: active_profile_protocol_tests.ps1  build_script_tests.ps1  config_tests.cpp  detection_resume_phase_analysis_tests.ps1  dml_performance_analysis_tests.ps1  lan_control_tests.ps1  machine_profile_cache_tests.cpp  machine_profile_candidate_tests.ps1  moving_target_analysis_tests.ps1  nine_grid_analysis_tests.ps1  phase_separation_analysis_tests.ps1  real_reacquisition_envelope_tests.ps1  recovery_speed_device_plan_tests.ps1  recovery_speed_device_protocol_analysis_tests.ps1  release_runtime_tests.ps1  shadow_pipeline_analysis_tests.ps1  speed_curve_tests.cpp  ui_visibility_tests.ps1
tools/: analyze_active_profile_protocol.ps1  analyze_detection_resume_phase.ps1  analyze_dml_performance.ps1  analyze_moving_target.ps1  analyze_nine_grid.ps1  analyze_phase_separation.ps1  analyze_real_reacquisition_envelope.ps1  analyze_recovery_speed_advice.ps1  analyze_recovery_speed_device_protocol.ps1  analyze_shadow_pipeline.ps1  build_common.ps1  build_cuda.ps1  build_dml.ps1  build_opencv_cuda.ps1  new_recovery_speed_device_plan.ps1  run_physical_response_probe_sweep.ps1  run_recovery_speed_device_protocol.ps1  setup_opencv_dml.ps1  test_recovery_speed_device_plan.ps1
